--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 MONGODB_URL=
 MAIL_HOST= smtp.gmail.com
 MAIL_USER = dummygaytrithakre@gmail.com
-MAIL_PASSWORD= 
+MAIL_PASSWORD= vugl aypi pcgr htff
+JWT_SECRET=
