changed Tag to Category Section,subsection,profile controller code done

--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ MAIL_HOST= smtp.gmail.com
 MAIL_USER = dummygaytrithakre@gmail.com
 MAIL_PASSWORD= vugl aypi pcgr htff
 JWT_SECRET=
-FOLDER_NAME
+FOLDER_NAME="StudyNotion"
