--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ MAIL_USER = dummygaytrithakre@gmail.com
 MAIL_PASSWORD= vugl aypi pcgr htff
 JWT_SECRET=
 FOLDER_NAME="StudyNotion"
+RAZORPAY_KEY=
+RAZORPAY_SECRET=
