changes and testing

--- a/.env
+++ b/.env
@@ -1,11 +1,13 @@
-MONGODB_URL=
+MONGODB_URL= "mongodb+srv://gaytrithakre8:t5THJkWyZcK3NWtF@cluster0.fvamo2r.mongodb.net/StudyNotion"
 MAIL_HOST= smtp.gmail.com
 MAIL_USER = dummygaytrithakre@gmail.com
 MAIL_PASSWORD= vugl aypi pcgr htff
-JWT_SECRET=
+JWT_SECRET="gaytri"
+FOLDER_NAME="StudyNotionFolder"
 FOLDER_NAME="StudyNotion"
-RAZORPAY_KEY=
-RAZORPAY_SECRET=
-CLOUD_NAME=
-API_KEY=
-API_SECRET=
+RAZORPAY_KEY=rzp_test_LUALfIplsmP5N0
+RAZORPAY_SECRET=tvktjLAZFPd5isMOLXaNrMfr
+CLOUD_NAME=djlm0pimx
+API_KEY=378319362932162
+API_SECRET=UA-iHH4bibicgajn-dOdkuXbIaA
+PORT=4000
